turtleart.stairs.Stairs.scala.error
Compilation error:
Stairs:9: error: not found: value angle
    right(angle);
          ^Stairs:11: error: not found: value angle
    left(angle);
         ^