turtleart.stairs.Stairs.scala.code
override def run () {
  stair (35.0, 6);
}

def stair (height:Double, number:Int) {
  penDown();
  for (i <- 0 to number-1) {
    forward(height);
  	right(angle);
    forward(height);
    left(angle);
  }
}